Create method to remove utxos used for a release transaction